이미지 요소 학습

--- a/src/html/01-basic-structure.html
+++ b/src/html/01-basic-structure.html
@@ -9,7 +9,7 @@
 <html lang="ko-KR">
     <head>
         <meta charset="utf-8" />
-        <title>HTML 기본 구조 마크업</title>
+        <title>HTML /기본 구조 마크업</title>
     </head>
     <body>
         <p>HTML, BODY, HEAD 등 기본 명령어 학습</p>
