이미지와 피규어 요소 완성

--- a/src/html/03-image-figure.html
+++ b/src/html/03-image-figure.html
@@ -74,6 +74,9 @@
             <img
                 src="/src/assets/drama/culinary-class-wars-narrow.jpg"
                 alt="요리 계급 전쟁 - 흑백요리사 {새로운 에피소스 지금 시청하기"
+                width="284"
+                height="400"
+                loading="lazy"
             />
             <figcaption>넷플릭스 흑백요리사</figcaption>
         </figure>
