하이퍼링크 UI 예제

--- a/src/html/04-anchor.html
+++ b/src/html/04-anchor.html
@@ -7,6 +7,18 @@
     </head>
     <body>
         <h1>하이퍼링크</h1>
+        <h2>하이퍼링크 및 이미지 UI 예제</h2>
+        <div>
+            <figure>
+                <img src="\src\assets\cafew\card-02-@1x.jpg" alt="회의" />
+                <figcaption>
+                    <p>RESPONSIVE WEB <br />DESIGN STRATEGIES</p>
+                    <p>반응형 웹디자인 전략</p>
+                    <a href="/">강의 정보</a>
+                </figcaption>
+            </figure>
+        </div>
+        <hr />
 
         <a href="https://bootcamp.likelion.net/" target="blank"
             >멋쟁이 사자처럼 부트캠프</a
