--- a/src/html/09-table.html
+++ b/src/html/09-table.html
@@ -65,5 +65,40 @@
                 </tr>
             </tbody>
         </table>
+        <br />
+        <table class="lecture-table">
+            <caption>
+                입문자를 위한 GIT과 HTML&CSS 과정
+                <span
+                    >학습시간, 난이도, 교육비 지원, 평가항목, 수료기준, 정원,
+                    교재 정보 등을 나타낸 표</span
+                >
+            </caption>
+            <tr>
+                <th id="study-time">학습시간</th>
+                <td id="study-time">09:00 ~ 17:00(28시간)</td>
+                <th id="difficulty">난이도</th>
+                <td id="difficulty">초급</td>
+            </tr>
+            <tr>
+                <th id="education-expenses">교육비 지원</th>
+                <td id="education-expenses">고용보험 비환급</td>
+                <th id="evaluation-items">평가항목</th>
+                <td id="evaluation-items">출석률 100%</td>
+            </tr>
+            <tr>
+                <th id="completion-criteria">수료기준</th>
+                <td id="completion-criteria">총점 80점 이상시 수료</td>
+                <th id="class-capacity">정원</th>
+                <td id="class-capacity">24명</td>
+            </tr>
+            <tr>
+                <th id="learning-textbook">교재정보</th>
+                <td colspan="3" id="learning-textbook">
+                    입문자를 위한 GIT과 HTML&CSS<br />
+                    HTML&CSS 웹사이트 개발과 디자인 기초(35,000원)
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
