--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li>
                 <a href="\src\html\10-container-element.html ">컨테이너 요소</a>
             </li>
+            <li>
+                <a href="\src\html\11-section-main.html">섹션과 메인 요소</a>
+            </li>
         </ul>
     </body>
 </html>
