--- a/src/html/11-section-main.html
+++ b/src/html/11-section-main.html
@@ -6,21 +6,21 @@
         <title>섹션과 메인 요소</title>
     </head>
     <body>
-        <header class="header">머리말</header>
-        <nav class="navigation">메뉴</nav>
-        <main class="content">
-            <section class="card">
-                <header>콘텐츠 섹션 헤더</header>
+        <div role="banner" class="header">본문 헤더</div>
+        <div role="navigation" class="navigation">내비게이션</div>
+        <div role="main" class="content">
+            <div role="article" class="card">
+                <div>섹션 헤더</div>
                 <p>...</p>
-                <footer>콘텐츠 섹션 푸터</footer>
-            </section>
-            <article class="product">
-                <header>콘텐츠 섹션 헤더</header>
+                <div>섹션 푸터</div>
+            </div>
+            <div role="article" class="product">
+                <div>섹션 헤더</div>
                 <p>...</p>
-                <footer>콘텐츠 섹션 푸터</footer>
-            </article>
-        </main>
-        <aside class="sidebar">부가정보</aside>
-        <footer class="footer">바닥글</footer>
+                <div>섹션 푸터</div>
+            </div>
+        </div>
+        <div role="complementary" class="sidebar">부가 콘텐츠</div>
+        <div role="contentinfo" class="footer">본문 푸터</div>
     </body>
 </html>
