--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <li>
                 <a href="\src\html\11-section-main.html">섹션과 메인 요소</a>
             </li>
+            <li>
+                <a href="\src\html\12-text-level-element.html"
+                    >텍스트 레벨 요소</a
+                >
+            </li>
         </ul>
     </body>
 </html>
