--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <li>
                 <a href="\src\html\13-address.html">address 요소</a>
             </li>
+            <li>
+                <a href="\src\html\14-picture-source.html"
+                    >picture, source 요소</a
+                >
+            </li>
         </ul>
     </body>
 </html>
