--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                     >picture, source 요소</a
                 >
             </li>
+            <li>
+                <a href="\src\html\15-video-source.html">video, source 요소</a>
+            </li>
         </ul>
     </body>
 </html>
