--- a/src/html/15-video-source.html
+++ b/src/html/15-video-source.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <video controls muted poster="/src/assets/video/poster.jpg">
-            # 자동 재생은 autoplay
+            <!--자동 재생은 autoplay-->
             <source
                 src="/src/assets/video/google-developer-stories.mp4"
                 type="video/mp4"
