--- a/index.html
+++ b/index.html
@@ -57,12 +57,21 @@
                 >
             </li>
             <li>
-                <a href="\src\html\15-video-source.html">video, source 요소</a>
+                <a href="\src\html\15-video-track.html">video, source 요소</a>
             </li>
             <li>
                 <a href="\src\html\16-iframe-object.html"
                     >iframe, object 요소</a
                 >
+            </li>
+            <li>
+                <a href="\src\html\17-map-area.html">이미지 맵 요소</a>
+            </li>
+            <li>
+                <a href="\src\html\18-form-input.html">form {input 요소}</a>
+            </li>
+            <li>
+                <a href="\src\html\naver.html">form {input 요소}</a>
             </li>
         </ul>
     </body>
