--- a/src/html/18-form-input.html
+++ b/src/html/18-form-input.html
@@ -9,17 +9,62 @@
         <h1>form 관련 요소</h1>
         <h2>input 요소</h2>
         <!-- 한 줄 입력서식 -->
-        <form action="/">
+        <form action="https://formspree.io/f/mnnjljyr" method="POST">
             <fieldset>
                 <legend>폼 서식</legend>
                 <div>
                     <label for="userName">이름</label>
-                    <input type="text" id="userName" />
+                    <input
+                        type="text"
+                        name="userName"
+                        id="userName"
+                        required
+                        placeholder="예)시운"
+                        maxlength="3"
+                    />
                 </div>
+                <!-- 비밀번호 입력 서식 -->
                 <div>
                     <label for="userPwd">비밀번호</label>
-                    <input type="search" id="LikelionSearch" />
+                    <input
+                        type="password"
+                        name="userPwd"
+                        id="userPwd"
+                        required
+                        placeholder="8자리 이상"
+                    />
                 </div>
+                <!-- 검색 입력 서식 -->
+                <div>
+                    <label for="likelionSearch">검색</label>
+                    <input
+                        type="search"
+                        name="likelionSearch"
+                        id="likelionSearch"
+                    />
+                </div>
+                <!-- 이메일 입력 서식 -->
+                <div>
+                    <label for="userEmail">이메일</label>
+                    <input
+                        type="email"
+                        name="userEmail"
+                        id="userEmail"
+                        required
+                    />
+                </div>
+                <!-- Tel 유형의 입력 서식 -->
+                <div>
+                    <label for="userPhone">연락처</label>
+                    <input
+                        type="tell"
+                        name="userPhone"
+                        id="userPhone"
+                        required
+                    />
+                </div>
+
+                <input type="submit" value="전송" />
             </fieldset>
         </form>
     </body>
