tel, checkbox, radio, submit

--- a/src/html/18-form-input.html
+++ b/src/html/18-form-input.html
@@ -64,6 +64,57 @@
                     />
                 </div>
 
+                <!-- 체크박스 서식 -->
+                <div>
+                    <input
+                        type="checkbox"
+                        checked
+                        value="HTML"
+                        name="classLikelion"
+                        id="classHtml"
+                    />
+                    <label for="classHtml">HTML</label>
+                </div>
+                <div>
+                    <input
+                        type="checkbox"
+                        value="CSS"
+                        name="classLikelion"
+                        id="classCss"
+                    />
+                    <label for="classCss">CSS</label>
+                </div>
+                <div>
+                    <input
+                        type="checkbox"
+                        value="JS"
+                        name="classLikelion"
+                        id="classJs"
+                    />
+                    <label for="classJs">JS</label>
+                </div>
+
+                <!-- 라디오 서식 -->
+                <div>
+                    <input
+                        type="radio"
+                        checked
+                        value="classRoom1"
+                        name="classRoom"
+                        id="classRoom1"
+                    />
+                    <label for="classRoom1">회고 1팀</label>
+                </div>
+                <div>
+                    <input
+                        type="radio"
+                        value="classRoom2"
+                        name="classRoom"
+                        id="classRoom2"
+                    />
+                    <label for="classRoom2">회고 2팀</label>
+                </div>
+
                 <input type="submit" value="전송" />
             </fieldset>
         </form>
