--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a href="\src\html\18-form-input.html">form {input 요소}</a>
             </li>
             <li>
-                <a href="\src\html\naver.html">form {input 요소}</a>
+                <a href="\src\html\19-form-button.html">form {button 요소}</a>
             </li>
         </ul>
     </body>
