--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             <li>
                 <a href="\src\html\19-form-button.html">form {button 요소}</a>
             </li>
+            <li>
+                <a href="\src\html\20-form-select-textarea.html"
+                    >form {select, textarea 요소}</a
+                >
+            </li>
         </ul>
     </body>
 </html>
