--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
                     >form {select, textarea 요소}</a
                 >
             </li>
+            <li>
+                <a href="\src\html\21-dialog-popover.html"
+                    >dialog 요소, popover 속성</a
+                >
+            </li>
+            <li>
+                <a href="\src\html\22-details-summary.html"
+                    >details, summary 요소</a
+                >
+            </li>
+            <li>
+                <a href="\src\html\23-script.html">script 요소</a>
+            </li>
         </ul>
     </body>
 </html>
