--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="shortcut icon"
+            href="/src/assets/favicon/likelion.ico"
+            type="image/x-icon"
+        />
+        <link rel="icon" href="/src/assets/favicon/likelion.svg" />
+
         <title>멋사 프론트엔드 부트캠프 13기</title>
     </head>
     <body>
@@ -119,6 +126,11 @@
                 </li>
                 <li>
                     <a href="/src/css/02-selector.html">CSS 선택자</a>
+                </li>
+                <li>
+                    <a href="/src/css/03-specificity.html"
+                        >상속, 겹침, 우선순위</a
+                    >
                 </li>
             </ul>
         </div>
