--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
                         >상속, 겹침, 우선순위</a
                     >
                 </li>
+                <li>
+                    <a href="/src/css/04-typography.html">Font 관련 속성</a>
+                </li>
             </ul>
         </div>
     </body>
