--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@
                 <li>
                     <a href="/src/css/04-typography.html">Font 관련 속성</a>
                 </li>
+                <li>
+                    <a href="/src/css/05-box-model.html">CSS 박스 모델</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h2>UI 예제</h2>
+            <ul>
+                <li>
+                    <a href="src/ui/01-member-service.html">멤버 서비스 링크</a>
+                </li>
             </ul>
         </div>
     </body>
