--- a/src/css/05-box-model.html
+++ b/src/css/05-box-model.html
@@ -15,10 +15,18 @@
             crossorigin
             href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css"
         />
-        <link rel="stylesheet" href="/src/css/styles" />
+        <link rel="stylesheet" href="/src/css/styles/05-box-model.css" />
         <title>CSS 박스 모델</title>
     </head>
     <body>
         <h1>CSS 박스 모델</h1>
+        <div class="like">
+            멋쟁이 사자처럼 프론트엔드 부트캠프 13기
+            <div>박스모델</div>
+        </div>
+        <div class="bootcamp">
+            <span class="lion teacher">강사 슬비쌤</span
+            ><span class="lion">화이팅!</span>
+        </div>
     </body>
 </html>
