--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                 <li>
                     <a href="/src/css/05-box-model.html">CSS 박스 모델</a>
                 </li>
+                <li>
+                    <a href="/src/css/06-reset.html">CSS Reset</a>
+                </li>
             </ul>
         </div>
         <div>
