CSS 중첩 사용하기

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
                 <li>
                     <a href="/src/css/06-reset.html">CSS Reset</a>
                 </li>
+                <li>
+                    <a href="/src/css/07-nesting.html">CSS 중첩</a>
+                </li>
             </ul>
         </div>
         <div>
