--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
                 <li>
                     <a href="/src/css/07-nesting.html">CSS 중첩</a>
                 </li>
+                <li>
+                    <a href="/src/css/08-position.html">CSS Position</a>
+                </li>
             </ul>
         </div>
         <div>
