css 사용자 정의 속성 - 전역변수 vs 지역변수

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
                 <li>
                     <a href="/src/css/08-position.html">CSS Position</a>
                 </li>
+                <li>
+                    <a href="/src/css/09-custom-properties.html">CSS 변수</a>
+                </li>
             </ul>
         </div>
         <div>
