--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
                 <li>
                     <a href="/src/css/09-custom-properties.html">CSS 변수</a>
                 </li>
+
+                <li>
+                    <a href="/src/css/10-background.html"
+                        >CSS 백그라운드 속성</a
+                    >
+                </li>
             </ul>
         </div>
         <div>
