--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
                 <li>
                     <a href="src/ui/01-member-service.html">멤버 서비스 링크</a>
                 </li>
+                <li>
+                    <a href="/src/ui/02-notification.html"
+                        >알림(Notification)</a
+                    >
+                </li>
             </ul>
         </div>
     </body>
