알림 UI 스타일링

--- a/src/ui/02-notification.html
+++ b/src/ui/02-notification.html
@@ -20,8 +20,7 @@
     </head>
     <body>
         <h1>알림(Notification)</h1>
-        <div class="notification">
-            <img src="" />
+        <div class="notification green">
             <div class="notification-subject">화초관리</div>
             <div class="notification-time">6분</div>
             <div class="notification-brief">화초에 물을 줄 시간입니다.</div>
