--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
                         >알림(Notification)</a
                     >
                 </li>
+                <li>
+                    <a href="src/ui/components/avatar/avatar.html"
+                        >아바타 컴포넌트</a
+                    >
+                </li>
+                <li>
+                    <a href="src/ui/05-avatar-list.html">아바타 리스트</a>
+                </li>
             </ul>
         </div>
     </body>
