--- a/src/ui/05-avatar-list.html
+++ b/src/ui/05-avatar-list.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>아바타 리스트</title>
         <link
             rel="shortcut icon"
             href="/src/assets/favicon/likelion.ico"
@@ -10,13 +11,88 @@
         />
         <link rel="icon" href="/src/assets/favicon/likelion.svg" />
         <link
-            rel="stylesheet"
-            as="style"
-            crossorigin
-            href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css"
+            rel="preload"
+            as="font"
+            href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT-Regular.woff2"
         />
-        <link rel="stylesheet" href="/src/css/styles" />
-        <title>Document</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT.css"
+        />
+        <link rel="stylesheet" href="/src/ui/styles/05-avatar-list.css" />
     </head>
-    <body></body>
+    <body>
+        <h1>아바타 리스트</h1>
+        <h2>인터렉션이 없는 아바타</h2>
+        <div class="case-01">
+            <ul>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face4.jpg" alt="임한길" />
+                        <figcaption class="state">
+                            <span class="sr-only">오프라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face1.jpg" alt="이훈진" />
+                        <figcaption class="state">
+                            <span class="sr-only">오프라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face2.jpg" alt="박선영" />
+                        <figcaption class="state is-active">
+                            <span class="sr-only">온라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face3.jpg" alt="송채은" />
+                        <figcaption class="state is-active">
+                            <span class="sr-only">온라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face4.jpg" alt="임한길" />
+                        <figcaption class="state">
+                            <span class="sr-only">오프라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face7.jpg" alt="이훈진" />
+                        <figcaption class="state">
+                            <span class="sr-only">오프라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face6.jpg" alt="박선영" />
+                        <figcaption class="state is-active">
+                            <span class="sr-only">온라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face5.jpg" alt="송채은" />
+                        <figcaption class="state is-active">
+                            <span class="sr-only">온라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </div>
+
+        <h2>인터렉션이 있는 아바타</h2>
+    </body>
 </html>
