--- a/src/ui/05-avatar-list.html
+++ b/src/ui/05-avatar-list.html
@@ -23,7 +23,7 @@
     </head>
     <body>
         <h1>아바타 리스트</h1>
-        <h2>인터렉션이 없는 아바타</h2>
+        <h2>inline-block</h2>
         <div class="case-01">
             <ul>
                 <li>
@@ -93,6 +93,74 @@
             </ul>
         </div>
 
-        <h2>인터렉션이 있는 아바타</h2>
+        <h2>float</h2>
+        <div class="case-02">
+            <ul>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face4.jpg" alt="임한길" />
+                        <figcaption class="state">
+                            <span class="sr-only">오프라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face1.jpg" alt="이훈진" />
+                        <figcaption class="state">
+                            <span class="sr-only">오프라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face2.jpg" alt="박선영" />
+                        <figcaption class="state is-active">
+                            <span class="sr-only">온라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face3.jpg" alt="송채은" />
+                        <figcaption class="state is-active">
+                            <span class="sr-only">온라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face4.jpg" alt="임한길" />
+                        <figcaption class="state">
+                            <span class="sr-only">오프라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face7.jpg" alt="이훈진" />
+                        <figcaption class="state">
+                            <span class="sr-only">오프라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face6.jpg" alt="박선영" />
+                        <figcaption class="state is-active">
+                            <span class="sr-only">온라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="img-avatar">
+                        <img src="/src/assets/face/face5.jpg" alt="송채은" />
+                        <figcaption class="state is-active">
+                            <span class="sr-only">온라인</span>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </div>
     </body>
 </html>
