--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                         >CSS 백그라운드 속성</a
                     >
                 </li>
+                <li><a href="/src/css/12-media-query.html">미디어 쿼리</a></li>
             </ul>
         </div>
         <div>
