--- a/src/ui/06-responsive-layout.html
+++ b/src/ui/06-responsive-layout.html
@@ -24,10 +24,12 @@
     <body>
         <div class="container">
             <header class="header">Header</header>
-            <nav class="navigation">Navigation</nav>
-            <div class="content-wrapper">
-                <main class="content">Main</main>
-                <aside class="sidebar">Sidebar</aside>
+            <div class="nav-main-aside-wrapper">
+                <nav class="navigation">Navigation</nav>
+                <div class="content-wrapper">
+                    <main class="content">Main Content</main>
+                    <aside class="sidebar">Sidebar</aside>
+                </div>
             </div>
             <footer class="footer">Footer</footer>
         </div>
