플렉스 아이템 관련 속성

--- a/src/css/14-flexbox.html
+++ b/src/css/14-flexbox.html
@@ -23,6 +23,14 @@
     </head>
     <body>
         <h1>플렉스 박스</h1>
+
+        <div class="case-02">
+            <div class="item1">아이템자식요소1</div>
+            <div class="item2">박스자식요소2</div>
+            <div class="item3">자식요소3</div>
+            <div class="item4">자식요소4번</div>
+        </div>
+
         <div class="case-01">
             <div class="item1">자식요소 1</div>
             <div class="item2">자식요소 2</div>
@@ -42,6 +50,13 @@
             <div class="item1">자식요소 7</div>
             <div class="item2">자식요소 8</div>
             <div class="item3">자식요소 9</div>
+        </div>
+        <hr />
+        <div class="case-02">
+            <div class="item1">자식요소1</div>
+            <div class="item2">자식요소2</div>
+            <div class="item3">자식요소3</div>
+            <div class="item4">자식요소4</div>
         </div>
     </body>
 </html>
