--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
                         >반응형 레이아웃</a
                     >
                 </li>
+                <li>
+                    <a href="/src/ui/07-flex-layout.html">플렉스 레이아웃</a>
+                </li>
             </ul>
         </div>
     </body>
