--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                 <li>
                     <a href="/src/ui/07-flex-layout.html">플렉스 레이아웃</a>
                 </li>
+                <li><a href="/src/ui/08-table.html">테이블 스타일링</a></li>
             </ul>
         </div>
     </body>
