--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
                     <a href="/src/ui/07-flex-layout.html">플렉스 레이아웃</a>
                 </li>
                 <li><a href="/src/ui/08-table.html">테이블 스타일링</a></li>
+                <li>
+                    <a href="/src/ui/09-sticky-header.html"
+                        >헤더 스타일링(sticky)</a
+                    >
+                </li>
             </ul>
         </div>
     </body>
