--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
                 </li>
                 <li><a href="/src/css/12-media-query.html">미디어 쿼리</a></li>
                 <li><a href="/src/css/14-flexbox.html">플렉스 박스</a></li>
+                <li>
+                    <a href="/src/css/15-stacking-context.html"
+                        >스택킹 컨텍스트</a
+                    >
+                </li>
             </ul>
         </div>
         <div>
