--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                         >스택킹 컨텍스트</a
                     >
                 </li>
+                <li>
+                    <a href="/src/ui/10-searchbar.html">검색 바 스타일링</a>
+                </li>
             </ul>
         </div>
         <div>
