--- a/src/ui/11-login.html
+++ b/src/ui/11-login.html
@@ -24,7 +24,7 @@
     <body>
         <div class="container">
             <!-- 헤더 - 로고 -->
-            <header class="header">
+            <header class="login-header">
                 <h1 class="sr-only">네이버 로그인</h1>
                 <a href="/" class="logo">
                     <svg
@@ -59,11 +59,13 @@
                 </a>
             </header>
             <!-- 폼 - 로그인 -->
-            <form action="/" method="post">
+            <form action="/" method="post" class="login-form">
                 <fieldset>
                     <legend class="sr-only">로그인 폼</legend>
                     <div class="input">
-                        <label class="input__label" for="input-4">이메일</label>
+                        <label class="input__label sr-only" for="input-4"
+                            >이메일</label
+                        >
                         <input
                             class="input__input"
                             type="email"
