--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 <li>
                     <a href="/src/ui/10-searchbar.html">검색 바 스타일링</a>
                 </li>
+                <li><a href="/src/css/16-gridbox.html">그리드 박스</a></li>
             </ul>
         </div>
         <div>
