--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
                 <li>
                     <a href="/src/ui/11-login.html">반응형 로그인 페이지</a>
                 </li>
+                <li>
+                    <a href="/src/ui/12-grid-layout.html">그리드 레이아웃</a>
+                </li>
             </ul>
         </div>
     </body>
