--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
                 <li>
                     <a href="/src/ui/12-grid-layout.html">그리드 레이아웃</a>
                 </li>
+                <li>
+                    <a href="/src/ui/13-avatar-grid.html"
+                        >아바타 레이아웃(그리드)</a
+                    >
+                </li>
             </ul>
         </div>
     </body>
