--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
                         >아바타 레이아웃(그리드)</a
                     >
                 </li>
+                <li>
+                    <a href="/src/ui/14-grid-linename.html"
+                        >그리드 레이아웃(name)</a
+                    >
+                </li>
             </ul>
         </div>
     </body>
