--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
                         >그리드 레이아웃(name)</a
                     >
                 </li>
+                <li>
+                    <a href="/src/ui/15-subgrid.html">서브 그리드</a>
+                </li>
             </ul>
         </div>
     </body>
