masonry-layout 스타일링

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                     <a href="/src/ui/10-searchbar.html">검색 바 스타일링</a>
                 </li>
                 <li><a href="/src/css/16-gridbox.html">그리드 박스</a></li>
+                <li><a href="/src/css/17-multi-column.html">멀티 컬럼</a></li>
             </ul>
         </div>
         <div>
@@ -206,7 +207,7 @@
                     <a href="/src/ui/11-login.html">반응형 로그인 페이지</a>
                 </li>
                 <li>
-                    <a href="/src/ui/12-grid-layout.html">그리드 레이아웃</a>
+                    <a href="/src/ui/12-grid-layout.html">grid 레이아웃</a>
                 </li>
                 <li>
                     <a href="/src/ui/13-avatar-grid.html"
@@ -215,11 +216,15 @@
                 </li>
                 <li>
                     <a href="/src/ui/14-grid-linename.html"
-                        >그리드 레이아웃(name)</a
+                        >grid 레이아웃(name)</a
                     >
                 </li>
                 <li>
-                    <a href="/src/ui/15-subgrid.html">서브 그리드</a>
+                    <a href="/src/ui/15-subgrid.html">subgrid</a>
+                </li>
+                <li><a href="/src/ui/16-masonry.html">Masonry 레이아웃</a></li>
+                <li>
+                    <a href="/src/ui/components/select/select.html">셀렉트</a>
                 </li>
             </ul>
         </div>
