--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
                     <a href="/src/css/18-light-dark.html">라이트/다크 모드</a>
                 </li>
                 <li><a href="/src/css/19-animation.html">에니메이션</a></li>
+                <li>
+                    <a href="/src/css/20-container-query.html">컨테이너 쿼리</a>
+                </li>
             </ul>
         </div>
         <div>
